--- a/Week3/day4/hackaton.css
+++ b/Week3/day4/hackaton.css
@@ -1,5 +1,6 @@
 body{
   background-image: url("guitarBackground.png");
+  
 }
 #parent{
  display: flex;
@@ -7,12 +8,14 @@ body{
  align-items: center;
  padding: 10px;
  flex-direction: column;
+ height: 100%;
 }
 .header{
-  border: solid blue 3px;
+  border: solid black 3px;
   display: flex;
   background-color: lightgray;
   letter-spacing: 2px;
+  margin: 5px;
 }
 h1{
   font-family: "Bangers";
@@ -27,10 +30,15 @@ label{font-weight: bold;}
 #contenedor_selecciones{
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
+  padding: 10px;
+  font-size: 2em;
   
 }
 #imgContainer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
    background-color: white;
 }
 #img{
@@ -44,222 +52,60 @@ label{font-weight: bold;}
   color: white;
   background-color: black;
 } */
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700,600);
-@import url(//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.1.0/css/font-awesome.min.css);
-
-
-input[type="range"] {
-  -webkit-appearance: none !important;
-  max-height: 3px;
-  position: relative;
-  top: -3px;
-  background: #DDD;
+#controls {
+	font-family:arial;
+	font-size:24px;
+	font-weight:bold;
+	margin: 15px;
 }
 
-input[type="range"]::-webkit-slider-thumb {
-  -webkit-appearance: none !important;
-  width: 15px;
-  height: 15px;
-  position: relative;
-  top: -1px;
-  background: #222;
+#controls * {
+	margin: 5px;
+	display:inline-block;
+	
 }
 
-input[type="checkbox"] {
-  display: none;
+.play {
+	-moz-box-shadow:inset 0px 20px 26px 0px #b6cde3;
+	-webkit-box-shadow:inset 0px 20px 26px 0px #b6cde3;
+	box-shadow:inset 0px 20px 26px 0px #b6cde3;
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #79bbff), color-stop(1, #378de5) );
+	background:-moz-linear-gradient( center top, #79bbff 5%, #378de5 100% );
+	background-color:#79bbff;
+	-moz-border-radius:20px;
+	-webkit-border-radius:20px;
+	border-radius:20px;
+	color:#ffffff;
+	padding:8px 24px;
+	text-decoration:none;
+	text-shadow:1px 1px 6px #000000;
+	width: 80px;
+	text-align: center;
 }
 
-input[type="checkbox"] + label {
-  display: inline-block !important;
-  height: 15px;
-  width: 15px;
-  margin: 0px 4px 0px 0px !important;
-  padding: 0px;
-  position: relative;
-  top: 4px;
-  background: #FFF;
-  cursor: pointer;
-}
-input[type="checkbox"] + label:before {
-  content: "";
-  display: inline-block;
-  width: 4px;
-  height: 8px;
-  background: #F38630;
-  opacity: 0;
-  position: relative;
-  top: -5px;
-  right: -1px;
-  transform: skewX(0deg);
-  transition: all 0.24s;
-}
-input[type="checkbox"] + label:after {
-  content: "";
-  display: inline-block;
-  width: 4px;
-  height: 15px;
-  background: #F38630;
-  opacity: 0;
-  position: relative;
-  top: -5px;
-  right: -3px;
-  transform: skewX(0deg);
-  transition: all 0.24s;
+.play:hover {
+	background:-webkit-gradient( linear, left top, left bottom, color-stop(0.05, #378de5), color-stop(1, #79bbff) );
+	background:-moz-linear-gradient( center top, #378de5 5%, #79bbff 100% );
+	background-color:#378de5;
 }
 
-input[type="checkbox"]:checked + label:before {
-  transform: skewX(30deg);
-  opacity: 1;
-}
-input[type="checkbox"]:checked + label:after {
-  transform: skewX(-30deg);
-  opacity: 1;
+.play:active {
+	position:relative;
+	top:1px; left: 1px;
 }
 
-.container {
-  width: 100%;
+#showTempo { 
+	display: inline-block;
+	width: 45px; 
 }
 
-header {
-  height: 65px;
-  background: #879BAD;
-  color: #2a353e;
-  font-size: 36px;
-  font-weight: 400;
-  text-align: center;
-  padding: 5px;
+#showSwing { 
+	display: inline-block;
+	width: 40px; 
 }
 
-.metronome-container {
-  width: 75%;
-  height: auto;
-  position: relative;
-  margin: 40px auto;
-  background: #2f2f2f;
-}
-.metronome-container .options-btn {
-  color: #FFF;
-  font-size: 22px;
-  position: absolute;
-  top: 20px;
-  right: 15px;
-  transform: rotateZ(0deg);
-  cursor: pointer;
-  transition: transform 0.3s;
-}
-.metronome-container .options-btn:hover {
-  transform: rotateZ(60deg);
-}
-.metronome-container .options-active {
-  max-height: 1000px !important;
-  padding: 15px;
-  overflow: visible !important;
-}
-.metronome-container .options {
-  max-height: 0px;
-  background: #FFF;
-  color: #333;
-  overflow: hidden;
-  transition: all 0.25s;
-  position: absolute;
-  top: 50px;
-  right: 15px;
-}
-.metronome-container .options .up {
-  color: #FFF;
-  font-size: 22px;
-  position: absolute;
-  top: -14px;
-  right: 3px;
-  z-index: 500;
-  transform: rotateZ(180deg);
-}
-.metronome-container .options label {
-  display: block;
-  margin-top: 10px;
-}
-.metronome-container .counter {
-  width: 100%;
-  padding-bottom: 10px;
-  background: #404040;
-  text-align: center;
-}
-.metronome-container .counter .dot {
-  width: 15px;
-  height: 15px;
-  display: inline-block;
-  margin: 25px 10px 10px 10px;
-  background: #FFF;
-  border-radius: 50%;
-  cursor: pointer;
-  transition: all 0.3s;
-}
-.metronome-container .counter .active {
-  background: #5ec2ff;
-}
-.metronome-container .controls {
-  color: #FFF;
-  padding: 20px;
-  text-align: center;
-}
-.metronome-container .controls label {
-  display: block;
-  margin-bottom: 18px;
-}
-.metronome-container .controls label span {
-  background: #FFF;
-  color: #222;
-  padding: 5px;
-}
-.metronome-container .controls label span i {
-  cursor: pointer;
-  transition: color 0.2s;
-}
-.metronome-container .controls label span i:hover {
-  color: #FA6900;
-}
-.metronome-container .controls input {
-  width: 30px;
-  border: 0px solid;
-  color: #222;
-  text-align: center;
-  padding: 4px;
-}
-.metronome-container .controls select {
-  border: 0px;
-  color: #222;
-}
-.metronome-container .controls .play-btn {
-  width: 45%;
-  background: #D6E26D;
-  border: 0px;
-  border-radius: 5px;
-  padding: 12px;
-  color: #3d430d;
-  transition: background 0.3s;
-}
-.metronome-container .controls .play-btn:hover {
-  background: #e8efad;
-}
-.metronome-container .controls .tap-btn {
-  width: 45%;
-  background: #888;
-  border: 0px;
-  border-radius: 5px;
-  padding: 12px;
-  color: #fbfbfb;
-  transition: background 0.3s;
-}
-.metronome-container .controls .tap-btn:hover {
-  background: #959595;
+* {
+    -webkit-user-select: none;
 }
 
-footer {
-  width: 50%;
-  height: auto;
-  background: #FFF;
-  color: #444;
-  padding: 10px;
-  margin: 50px auto;
-}
 
